--- a/css/main.css
+++ b/css/main.css
@@ -2,4 +2,54 @@ body {
   font-family: 'Sen', sans-serif;
   margin: 0; }
 
+header {
+  width: auto;
+  height: 80vh;
+  text-align: center;
+  background-image: url(../media/images/background/mountain.jpg);
+  background-size: cover;
+  background-position: center; }
+
+nav {
+  text-align: center;
+  padding-top: 1%;
+  width: 100%;
+  height: 40px;
+  background-color: white; }
+  nav span {
+    margin: 0 2%;
+    font-size: 20px;
+    text-transform: uppercase; }
+  nav a {
+    text-decoration: none;
+    color: #4f9ad6; }
+
+#dp-name {
+  width: 100%;
+  text-transform: uppercase;
+  color: white;
+  font-size: 50px;
+  margin-top: 14%;
+  margin-bottom: 0;
+  text-shadow: 2px 2px 10px #4f9ad6; }
+
+#sub-text {
+  text-transform: uppercase;
+  text-shadow: 2px 2px 3px #4f9ad6;
+  margin-top: 0;
+  color: #000000; }
+
+#dp-pic {
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  border-radius: 50%;
+  left: 50%;
+  background-image: url(/media/images/my_pics/khanyi-min.JPG);
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat; }
+
 /*# sourceMappingURL=main.css.map */
