--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -3,3 +3,33 @@ body {
     font-family: 'Sen', sans-serif;
     margin: 0;
 }
+
+header {
+    width: auto;
+    height: 80vh;
+    text-align: center;
+    background-image: url(../media/images/background/mountain.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+// NAV Bar
+
+nav {
+    text-align: center;
+    padding-top: 1%;
+    width: 100%;
+    height: 40px;
+    background-color: white;
+
+    span {
+        margin: 0 2%;
+        font-size: 20px;
+        text-transform: uppercase;
+    }
+
+    a {
+        text-decoration: none;
+        color: #4f9ad6;
+    }
+}
