--- a/scss/partials/_helpers.scss
+++ b/scss/partials/_helpers.scss
@@ -1,1 +1,31 @@
 // This is where I style my classes and Id's
+#dp-name {
+    width: 100%;
+    text-transform: uppercase;
+    color: white;
+    font-size: 50px;
+    margin-top: 14%;
+    margin-bottom: 0;
+    text-shadow: 2px 2px 10px #4f9ad6;
+}
+
+#sub-text {
+    text-transform: uppercase;
+    text-shadow: 2px 2px 3px #4f9ad6;
+    margin-top: 0;
+    color: #000000;
+}
+
+#dp-pic {
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border-radius: 50%;
+    left: 50%;
+    background-image: url(/media/images/my_pics/khanyi-min.JPG);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
