--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -1,1 +1,38 @@
-// This is where I store my fonts, colors and icons
+// This is where I store my fonts, colors and icons\
+
+// ------------------ Fonts ------------------
+
+// Gotu
+@font-face {
+    font-family: 'Gotu';
+    src: url(../fonts/Gotu/Gotu-Regular.ttf);
+}
+
+// Montserrat
+@font-face {
+    font-family: 'Montserrat';
+    src: url(../fonts/Montserrat/Montserrat-Regular.ttf);
+}
+
+// Sen
+@font-face {
+    font-family: 'Sen';
+    src: url(../fonts/Sen/Sen-Regular.ttf);
+}
+
+// Comic Neue
+@font-face {
+    font-family: 'Comic Neue';
+    src: url(../fonts/Comic_Neue/ComicNeue-Regular.ttf);
+}
+
+// Oleo Script
+@font-face {
+    font-family: 'Oleo Script';
+    src: url(../fonts/Oleo_Script/OleoScript-Regular.ttf);
+}
+
+@font-face {
+    font-family: 'Oleo Script Swash Caps';
+    src: url(/fonts/Oleo_Script_Swash_Caps/OleoScriptSwashCaps-Regular.ttf);
+}
