--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,24 @@
+@font-face {
+  font-family: 'Gotu';
+  src: url(../fonts/Gotu/Gotu-Regular.ttf); }
+@font-face {
+  font-family: 'Montserrat';
+  src: url(../fonts/Montserrat/Montserrat-Regular.ttf); }
+@font-face {
+  font-family: 'Sen';
+  src: url(../fonts/Sen/Sen-Regular.ttf); }
+@font-face {
+  font-family: 'Comic Neue';
+  src: url(../fonts/Comic_Neue/ComicNeue-Regular.ttf); }
+@font-face {
+  font-family: 'Oleo Script';
+  src: url(../fonts/Oleo_Script/OleoScript-Regular.ttf); }
+@font-face {
+  font-family: 'Oleo Script Swash Caps';
+  src: url(/fonts/Oleo_Script_Swash_Caps/OleoScriptSwashCaps-Regular.ttf); }
+html {
+  scroll-behavior: smooth; }
+
 body {
   font-family: 'Sen', sans-serif;
   margin: 0; }
@@ -5,10 +26,17 @@ body {
 header {
   width: auto;
   height: 80vh;
-  text-align: center;
   background-image: url(../media/images/background/mountain.jpg);
   background-size: cover;
-  background-position: center; }
+  background-position: center;
+  margin: 0; }
+  header img {
+    width: 30px;
+    height: 30px;
+    text-align: left;
+    padding-left: 20px; }
+  header p {
+    display: none; }
 
 nav {
   text-align: center;
@@ -24,20 +52,55 @@ nav {
     text-decoration: none;
     color: #4f9ad6; }
 
+main {
+  margin-top: 8%; }
+
+#about {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(1fr, 2); }
+
+#education {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(1fr, 3); }
+
+#award {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(1fr, 3); }
+
+#skill {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(1fr, 4); }
+
+#projects {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(1fr, 3); }
+
+#contact {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(1fr, 2); }
+
 #dp-name {
   width: 100%;
   text-transform: uppercase;
   color: white;
   font-size: 50px;
-  margin-top: 14%;
+  padding-top: 14%;
   margin-bottom: 0;
-  text-shadow: 2px 2px 10px #4f9ad6; }
+  text-shadow: 2px 2px 10px #4f9ad6;
+  text-align: center; }
 
 #sub-text {
   text-transform: uppercase;
   text-shadow: 2px 2px 3px #4f9ad6;
   margin-top: 0;
-  color: #000000; }
+  color: #000000;
+  text-align: center; }
 
 #dp-pic {
   width: 200px;
@@ -47,9 +110,463 @@ nav {
   background-color: white;
   border-radius: 50%;
   left: 50%;
-  background-image: url(/media/images/my_pics/khanyi-min.JPG);
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat; }
+  background-color: #63b0eeea; }
+
+.about-h1 {
+  grid-column: span 2;
+  text-align: center;
+  border-bottom: 1px solid #4f9ad6; }
+
+#about {
+  margin: auto 100px; }
+  #about img {
+    width: 400px;
+    height: 300px; }
+  #about p {
+    font-size: 18px; }
+
+.first-para {
+  margin-top: 10px;
+  margin-right: 36%;
+  transition: 0.5s; }
+
+.second-para {
+  margin-left: 36%;
+  text-align: right;
+  transition: 0.5s; }
+
+.signature {
+  font-family: 'Oleo Script Swash Caps';
+  font-style: italic;
+  transition: 0.5s; }
+
+.edu-h1 {
+  grid-column: span 3;
+  text-align: center;
+  border-bottom: 1px solid #4f9ad6; }
+
+#education {
+  margin: auto 100px; }
+
+.edu-block h3 {
+  text-align: left; }
+.edu-block p {
+  text-align: right; }
+
+#award {
+  margin: auto 100px; }
+  #award p {
+    margin-top: 0; }
+
+.award-h1 {
+  grid-column: span 3;
+  text-align: center;
+  border-bottom: 1px solid #4f9ad6; }
+
+.award-h4 {
+  grid-column: span 3;
+  text-align: center;
+  margin: 0; }
+
+.award-block {
+  text-align: center;
+  position: relative;
+  overflow: hidden; }
+  .award-block img {
+    width: 300px;
+    height: 250px; }
+
+.award-block:hover .sicText {
+  height: 100%;
+  opacity: 1; }
+
+.award-block:hover .sicText p {
+  top: 50%;
+  opacity: 1; }
+
+.sicText {
+  width: 300px;
+  height: 250px;
+  background-color: #03a9f4bf;
+  position: absolute;
+  left: 0;
+  right: 0;
+  transform: translateX(34.5px);
+  transition: all ease-in-out 0.8s;
+  opacity: 0;
+  height: 0;
+  bottom: 0;
+  top: 0;
+  cursor: pointer; }
+  .sicText p {
+    position: absolute;
+    top: -6rem;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    opacity: 0;
+    transition: all 0.1s ease-in-out 0.2s; }
+
+.innovationChallenge {
+  grid-column: span 3;
+  text-align: center; }
+
+#skill {
+  margin: 50px 100px; }
+  #skill p {
+    grid-column: span 4;
+    text-align: center;
+    margin-top: 0; }
+
+.skill-h1 {
+  grid-column: span 4;
+  text-align: center;
+  border-bottom: 1px solid #4f9ad6; }
+
+.codeIcon {
+  text-align: center; }
+  .codeIcon span {
+    transition: all ease-in-out .5s; }
+
+.icon {
+  width: 50px;
+  height: 50px;
+  margin-left: 40%;
+  cursor: pointer;
+  transition: all ease-in-out .5s; }
+  .icon img {
+    width: 50px;
+    height: 50px; }
+  .icon .css3 {
+    width: 40px;
+    height: 45px; }
+
+.codeIcon:hover span {
+  text-shadow: 0px 6px 3px black; }
+
+.codeIcon:hover .icon {
+  box-shadow: 2px 2px 3px black; }
+
+#projects {
+  margin: 50px 100px; }
+
+.project-h1 {
+  grid-column: span 3;
+  text-align: center;
+  border-bottom: 1px solid #4f9ad6; }
+
+.project-block {
+  background-color: #4f9ad6;
+  width: 380px;
+  height: 300px;
+  position: relative; }
+  .project-block img {
+    width: 380px;
+    height: 300px; }
+  .project-block video {
+    width: 380px;
+    height: 300px;
+    object-fit: cover; }
+  .project-block span {
+    background-color: #00BCD4;
+    width: 380px;
+    height: 300px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 1;
+    transition: all .5s ease-out; }
+  .project-block .project-overlay {
+    transition: all .5s ease-in-out;
+    background-color: #03a9f4cc;
+    position: absolute;
+    height: 300px;
+    width: 0;
+    opacity: 0;
+    left: 0;
+    top: 0; }
+  .project-block .overlay-text {
+    transition: all .5s ease-in-out;
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    font-size: 20px;
+    opacity: 0;
+    transform: translate(-50%, -50%); }
+  .project-block .video-text {
+    transition: all .5s ease-in-out;
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    font-size: 20px;
+    opacity: 1;
+    transform: translate(-50%, -50%);
+    height: auto; }
+
+.project-block:hover .overlay-text {
+  opacity: 1; }
+
+.project-block:hover .project-overlay {
+  opacity: 1;
+  width: 380px; }
+
+.project-block:hover span, .video-text {
+  height: 0;
+  opacity: 0; }
+
+.up {
+  box-shadow: 2px 2px 3px #00bcd46e;
+  position: fixed;
+  right: 35px;
+  bottom: 5%;
+  border-radius: 10px;
+  width: 40px;
+  height: 35px;
+  border-color: #03A9F4;
+  background-color: #03A9F4;
+  color: white;
+  font-family: inherit;
+  text-transform: uppercase; }
+
+.down {
+  box-shadow: 2px 2px 3px #00bcd46e;
+  position: fixed;
+  left: 35px;
+  bottom: 5%;
+  border-radius: 10px;
+  width: 40px;
+  height: 35px;
+  border-color: #03A9F4;
+  background-color: #03A9F4;
+  color: white;
+  font-family: inherit;
+  text-transform: uppercase; }
+
+#contact {
+  margin: auto 100px; }
+  #contact li {
+    list-style-type: none; }
+    #contact li a {
+      text-decoration: none; }
+  #contact p {
+    text-align: center;
+    margin-top: 30px; }
+  #contact h3 {
+    text-align: center;
+    border-bottom: 1px solid #4f9ad6;
+    margin: auto 50px; }
+
+.contact-h1 {
+  text-align: center;
+  border-bottom: 1px solid #4f9ad6;
+  grid-column: span 2; }
+
+.download {
+  background-color: #008eff;
+  color: white;
+  padding: 10px 15px;
+  border-radius: 10px;
+  text-decoration: none; }
+
+@media (max-width: 1025px) {
+  #about img {
+    width: 350px;
+    height: 250px; }
+
+  #about p {
+    font-size: 17px; }
+
+  #projects {
+    grid-template-columns: repeat(1fr, 2); }
+
+  .project-h1 {
+    grid-column: span 2; }
+
+  .project-block {
+    width: 300px;
+    height: 250px; }
+    .project-block img, .project-block video, .project-block span {
+      width: 300px;
+      height: 250px; }
+
+  .icon {
+    margin-left: 36%; }
+
+  #contact p {
+    text-align: left; }
+  #contact h3 {
+    margin: auto 10px; } }
+@media (max-width: 780px) {
+  nav.active {
+    left: 0; }
+
+  nav {
+    height: 100vh;
+    display: block;
+    position: absolute;
+    background-color: wheat;
+    left: -100%;
+    transition: 0.5s; }
+    nav span {
+      display: block;
+      padding: 10px 0;
+      font-size: 25px;
+      border-bottom: 1px solid #919191; }
+
+  header p {
+    padding: 5px 0;
+    margin: 0;
+    background-color: white;
+    display: block; }
+  header img {
+    position: absolute;
+    height: 20px;
+    right: 5px; }
+
+  .logo {
+    margin: 20px 0;
+    padding-left: 5px;
+    font-size: 18px;
+    font-family: 'Oleo Script Swash Caps';
+    color: #0084ff; }
+
+  #dp-name {
+    margin-top: 8%; }
+
+  #about {
+    margin: auto 50px; }
+
+  #about p {
+    font-size: 15px; }
+
+  #dp-pic {
+    width: 150px;
+    height: 150px; }
+
+  .first-para {
+    margin-right: 0; }
+
+  .second-para {
+    margin-left: 0;
+    text-align: left; }
+
+  #education {
+    margin: auto 50px;
+    grid-template-columns: repeat(1fr, 2); }
+
+  .edu-h1 {
+    grid-column: span 2; }
+
+  #award {
+    margin: auto 50px;
+    grid-template-columns: repeat(1fr, 2); }
+
+  .award-h1 {
+    grid-column: span 2; }
+
+  .award-h4 {
+    grid-column: span 2; }
+
+  .innovationChallenge {
+    grid-column: span 2; }
+
+  .sicText {
+    transform: translateX(13px); }
+
+  #skill {
+    margin: 50px;
+    grid-template-columns: repeat(1fr, 2); }
+
+  .skill-h1 {
+    grid-column: span 2; }
+
+  #skill p {
+    grid-column: span 2; }
+
+  .icon {
+    margin-left: 42%; }
+
+  #projects {
+    margin: 50px; }
+
+  .project-block {
+    margin-left: 10px; } }
+@media (max-width: 480px) {
+  #dp-name {
+    font-size: 35px;
+    margin-top: 28%; }
+
+  #sub-text {
+    font-size: 17px; }
+
+  #dp-pic {
+    width: 135px;
+    height: 135px; }
+
+  #about {
+    margin: 50px 25px;
+    grid-template-columns: repeat(1fr, 1); }
+
+  .about-h1 {
+    grid-column: span 1; }
+
+  #education {
+    margin: auto 30px;
+    grid-template-columns: repeat(1fr, 1); }
+
+  .edu-h1 {
+    grid-column: span 1; }
+
+  #award {
+    margin: auto 25px;
+    grid-template-columns: repeat(1fr, 1); }
+
+  .award-h1, .award-h4 {
+    grid-column: span 1; }
+
+  .innovationChallenge {
+    grid-column: span 1; }
+
+  .sicText {
+    transform: translateX(37px); }
+
+  #skill {
+    margin: 50px 25px;
+    grid-template-columns: repeat(1fr, 2); }
+
+  .icon {
+    margin-left: 35%; }
+
+  #project {
+    margin: 50px 25px;
+    grid-template-columns: repeat(1fr, 1); }
+
+  .project-h1 {
+    grid-column: span 1; }
+
+  #contact {
+    grid-template-columns: repeat(1fr, 1);
+    margin: auto 50px; }
+    #contact .contact-h1 {
+      grid-column: span 1; }
+    #contact p {
+      text-align: center; }
+
+  .up {
+    right: 5px;
+    bottom: 55px;
+    width: 25px;
+    height: 25px; }
+
+  .down {
+    left: auto;
+    right: 5px;
+    bottom: 15px;
+    width: 25px;
+    height: 25px; } }
 
 /*# sourceMappingURL=main.css.map */
