--- a/scss/partials/_responsive-design.scss
+++ b/scss/partials/_responsive-design.scss
@@ -1,1 +1,277 @@
 // This is where I style my other sizes like iPad, iPhone, and many others
+
+// Small Size Laptop
+@media (max-width: 1025px) {
+
+    #about img {
+        width: 350px;
+        height: 250px;
+    }
+
+    #about p {
+        font-size: 17px;
+    }
+
+    #projects {
+        grid-template-columns: repeat(1fr,2);
+    }
+
+    .project-h1 {
+        grid-column: span 2;
+    }
+
+    .project-block {
+        width: 300px;
+        height: 250px;
+
+        img, video, span {
+            width: 300px;
+            height: 250px;
+        }
+    }
+
+    .icon {
+        margin-left: 36%;
+    }
+
+    #contact {
+
+        p {
+            text-align: left;
+        }
+
+        h3 {
+            margin: auto 10px;
+        }
+    }
+}
+
+
+// Tablet Size
+@media (max-width: 780px) {
+    nav.active {
+        left: 0;
+    }
+    
+    nav {
+        height: 100vh;
+        display: block;
+        position: absolute;
+        background-color: wheat;
+        left: -100%;
+        transition: 0.5s;
+        
+
+        span {
+            display: block;
+            padding: 10px 0;
+            font-size: 25px;
+            border-bottom: 1px solid #919191;
+        }
+    }
+     
+    header {
+
+        p {
+            padding: 5px 0;
+            margin: 0;
+            background-color: white;
+            display: block;
+        }
+
+        img {
+            position: absolute;
+            height: 20px;
+            right: 5px;
+        }
+        
+    }
+
+    .logo {
+        margin: 20px 0;
+        padding-left: 5px;
+        font-size: 18px;
+        font-family: 'Oleo Script Swash Caps';
+        color: #0084ff;
+    }
+
+    #dp-name {
+        margin-top: 8%;
+    }
+
+    #about {
+        margin: auto 50px;
+    }
+
+    #about p {
+        font-size: 15px;
+    }
+
+    #dp-pic {
+        width: 150px;
+        height: 150px;
+    }
+
+    .first-para {
+        margin-right: 0;
+    }
+    .second-para {
+        margin-left: 0;
+        text-align: left;
+    }
+
+    #education {
+        margin: auto 50px;
+        grid-template-columns: repeat(1fr,2);
+    }
+
+    .edu-h1 {
+        grid-column: span 2;
+    }
+
+    #award {
+        margin: auto 50px;
+        grid-template-columns: repeat(1fr,2);
+    }
+
+    .award-h1 {
+        grid-column: span 2;
+    }
+
+    .award-h4 {
+        grid-column: span 2;
+    }
+
+    .innovationChallenge {
+        grid-column: span 2;
+    }
+
+    .sicText {
+        transform: translateX(13px);
+    }
+
+    #skill {
+        margin: 50px;
+        grid-template-columns: repeat(1fr,2);
+    }
+
+    .skill-h1 {
+        grid-column: span 2;
+    }
+
+    #skill p {
+        grid-column: span 2;
+    }
+
+    .icon {
+        margin-left: 42%;
+    }
+
+    #projects {
+        margin: 50px;
+    }
+
+    .project-block {
+        margin-left: 10px;
+    }
+}
+
+
+// Phone Size
+
+@media (max-width: 480px) {
+    
+    #dp-name {
+        font-size: 35px;
+        margin-top: 28%;
+    }
+
+    #sub-text {
+        font-size: 17px;
+    }
+
+    #dp-pic {
+        width: 135px;
+        height: 135px;
+    }
+
+    #about {
+        margin: 50px 25px;
+        grid-template-columns: repeat(1fr,1);
+    }
+
+    .about-h1 {
+        grid-column: span 1;
+    }
+
+    #education {
+        margin: auto 30px;
+        grid-template-columns: repeat(1fr,1);
+    }
+
+    .edu-h1 {
+        grid-column: span 1;
+    }
+
+    #award {
+        margin: auto 25px;
+        grid-template-columns: repeat(1fr,1);
+    }
+
+    .award-h1, .award-h4 {
+        grid-column: span 1;
+    }
+
+    .innovationChallenge {
+        grid-column: span 1;
+    }
+
+    .sicText {
+        transform: translateX(37px);
+    }
+
+    #skill {
+        margin: 50px 25px;
+        grid-template-columns: repeat(1fr,2);
+    }
+
+    .icon {
+        margin-left: 35%;
+    }
+
+    #project {
+        margin: 50px 25px;
+        grid-template-columns: repeat(1fr,1);
+    }
+
+    .project-h1 {
+        grid-column: span 1;
+    }
+
+    #contact {
+        grid-template-columns: repeat(1fr,1);
+        margin: auto 50px;
+        .contact-h1 {
+            grid-column: span 1;
+        }
+
+        p {
+            text-align: center;
+        }
+    }
+
+    .up {
+        right: 5px;
+        bottom: 55px;
+        width: 25px;
+        height: 25px;  
+    }
+
+    .down {
+        left: auto;
+        right: 5px;
+        bottom: 15px;
+        width: 25px;
+        height: 25px;
+    }
+}
