--- a/scss/partials/_responsive-design.scss
+++ b/scss/partials/_responsive-design.scss
@@ -54,10 +54,10 @@
     }
     
     nav {
-        height: 100vh;
+        height: 42vh;
         display: block;
         position: absolute;
-        background-color: wheat;
+        background-color: white;
         left: -100%;
         transition: 0.5s;
         
@@ -65,8 +65,9 @@
         span {
             display: block;
             padding: 10px 0;
-            font-size: 25px;
+            font-size: 20px;
             border-bottom: 1px solid #919191;
+            box-shadow: 2px 2px 3px black;
         }
     }
      
