--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -22,7 +22,8 @@ header {
         width: 30px;
         height: 30px;
         text-align: left;
-        padding-left: 20px;;
+        padding-left: 20px;
+        ;
     }
 
     p {
@@ -53,5 +54,19 @@ nav {
 }
 
 main {
-    margin-top: 8%;
+    margin: 8% auto 0;
+    max-width: 1360px;
+    overflow: hidden;
+}
+
+footer {
+    background-color: #03A9F4;
+    color: white;
+
+    p {
+        text-align: center;
+        border-top: 1px solid;
+        margin: auto 100px;
+        padding: 10px 0;
+    }
 }
