--- a/scss/partials/_helpers.scss
+++ b/scss/partials/_helpers.scss
@@ -39,7 +39,7 @@
 }
 
 #about {
-    margin: auto 100px;
+    margin: 0 auto;
 
     img {
         width: 400px;
@@ -78,7 +78,7 @@
 }
 
 #education {
-    margin: auto 100px;
+    margin: 0 auto;
 }
 
 .edu-block {
@@ -93,7 +93,7 @@
 }
 
 #award {
-    margin: auto 100px;
+    margin: 0 auto;
 
     p {
         margin-top: 0;
@@ -116,6 +116,7 @@
     text-align: center;
     position: relative;
     overflow: hidden;
+    margin: 0 auto;
     img {
         width: 300px;
         height: 250px;
@@ -139,7 +140,7 @@
     position: absolute;
     left: 0;
     right: 0;
-    transform: translateX(34.5px);
+    margin: 0 auto;
     transition: all ease-in-out 0.8s;
     opacity: 0;
     height: 0;
@@ -164,7 +165,7 @@
 }
 
 #skill {
-    margin: 50px 100px;
+    margin: 50px auto;
 
     p {
         grid-column: span 4;
@@ -222,7 +223,7 @@
 
 
 #projects {
-    margin: 50px 100px;
+    margin: 50px auto;
 }
 
 .project-h1 {
@@ -315,6 +316,35 @@
     opacity: 0;
 }
 
+#brands {
+    margin: 50px auto;
+}
+
+.brands-h1 {
+    // grid-column: span 4;
+    text-align: center;
+    border-bottom: 1px solid #4f9ad6;
+}
+
+.brands-carousel{
+    overflow: hidden;
+    width: 100%;
+}
+
+.brands-block {
+    background-color: white;
+    width: 100%; 
+    height: 75px;
+    position: relative;
+    margin: 0 auto;    
+
+    img{
+        width: 140px;
+        height: 50px;
+        margin: 0 auto;
+    }
+}
+
 .up {
     box-shadow: 2px 2px 3px #00bcd46e;
     position: fixed;
@@ -348,7 +378,7 @@
 // Contact Details
 
 #contact {
-    margin: auto 100px;
+    margin: 0 auto;
 
     li {
         list-style-type: none;
